# ETL-FunctionalProgramming

./: .gitignore  README.md
Data/: agg_order.csv  agg_order.db
ETL/: ETL.opam  dune  dune-project  hello_world.ml
ETL/_build/: log
ETL/dune.lock/: lock.dune  ocamlbuild.pkg
ETL/lib/: dune
ETL/src/: constants.ml  csv_helper.ml  csv_processor.ml  csv_writer.ml  dune  hello_world.ml  http_call.ml  main.ml  types.ml
ETL/src/extractor/: extractor_utils.ml  parser.ml  reader.ml
ETL/src/helper/: csv_helper.ml  helper_utils.ml  mapper.ml  order.ml  order_item.ml
ETL/src/loader/: csv_writer.ml  database_writer.ml
ETL/src/processor/: calculator.ml  csv_processor.ml  filter.ml  summary.ml
ETL/src/shared/: constants.ml  types.ml
ETL/test/: dune  extractor_test.ml  helper_test.ml  loader_test.ml  processor_test.ml
