(lang dune 3.17)

(name ETL)

(generate_opam_files true)

(source
 (github leticiacb1/ETL-FunctionalProgramming))

(authors "Leticia Coelho Barbosa <leticiacb1@al.insper.edu.br>")

(maintainers "Leticia Coelho Barbosa <leticiacb1@al.insper.edu.br>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ETL)
 (synopsis "Extract, Transform, Load")
 (description "Using functional programming to extract information from an Excel, perform operations on the data and load the information into another file.")
 (depends 
    (ocaml (>= 4.14))
    fmt))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
