(lang dune 3.17)

(name ETL)

(generate_opam_files true)

(source
 (github leticiacb1/ETL-FunctionalProgramming))

(authors "Leticia Coelho Barbosa <leticiacb1@al.insper.edu.br>")

(maintainers "Leticia Coelho Barbosa <leticiacb1@al.insper.edu.br>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ETL)
 (synopsis "Extract, Transform, Load")
 (description "Using functional programming to extract information from an Excel, perform operations on the data and load the information into another file.")
 (depends 
    (ocaml (>= 4.14)) 
    (cohttp (>= 6.1))
    (cohttp-lwt (>= 6.1))
    (cohttp-lwt-unix (>= 6.1))
    (csv (>= 2.4))
    (lwt_ssl (>= 1.2))
  )
)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
