(subdir shared
  (library
    (name shared)
    (modules constants types)
  )
)

(subdir helper
  (library
    (name helper)
    (modules helper_utils order order_item mapper)
    (libraries shared)
  )
)

(subdir extractor
  (library
    (name extractor)
    (modules extractor_utils parser reader)
    (libraries cohttp cohttp-lwt cohttp-lwt-unix)
  )
)

(subdir processor
  (library
    (name processor)
    (modules filter calculator summary)
    (libraries shared)
  )
)

(subdir loader
  (library
    (name loader)
    (modules csv_writer database_writer)
    (libraries csv sqlite3 shared)
  )
)

(executable
 (name main)
 (public_name main)
 (modules main)
 (libraries helper shared extractor processor loader) 
)